# ProjectMnemosyne

./: .coverage  .editorconfig  .gitignore  .gitleaks.toml  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  ADVISE_RETROSPECTIVE_UPDATED.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MIGRATION_STATUS.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  justfile  marketplace.json  mypy.ini  pixi.toml  plan-abundant-crafting-falcon.md  plan-linear-weaving-pumpkin.md  plan-structured-spinning-kahan.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.history/: clean-branches.md
plugins/: add-analysis-metric.json  add-comparison-table.json  collaborator-extraction-tdd.json  dockerfile-dep-pin.json  dryrun3-completion.json  expose-run-report-process-metrics.json  extend-statistical-tests.json  extract-method-to-private-methods.json  module-decomposition-with-reexports.json  parallel-test-generation-for-module-decomposition.json  persist-process-metrics-resume.json  t5-inherit-missing-manifest-fallback.json  verify-mypy-compliance-test-annotations.json  wire-figure-pipeline.json
references/: batch-pr-ci-fixer-notes.md  ci-matrix-continue-on-error-pattern-notes.md  dryrun3-completion-notes.md  extend-script-test-coverage-notes.md  module-level-schema-cache-notes.md  mojo-format-non-blocking-notes.md  multi-pr-issue-triage-notes.md  notes.md  pr-review-automation-integration-notes.md  precommit-schema-validation-notes.md  ruff-c901-mccabe-complexity-notes.md  script-dry-run-flag-notes.md  wire-schema-validation-notes.md  worktree-branch-cleanup-notes.md
reports/: myrmidon-merge-triage-2026-05-04.md
schemas/: marketplace.schema.json  skill-frontmatter.schema.json
scripts/: add_user_invocable.py  build_package.py  check_pii.py  fix_failed_attempts_tables.py  fix_md_tables.py  fix_remaining_issues.py  fix_remaining_warnings.py  fix_skill_names.py  fix_skill_validation.py  fix_skill_validation_v2.py  fix_validation_warnings.py  generate_marketplace.py  migrate_ecosystem_skills.py  migrate_to_flat.py  migrate_to_skills.py  mnemosyne_skill_utils.py  skill_utils.py  validate_plugins.py  validate_release_contract.py
skills/: academic-paper-myrmidon-swarm-review.history  academic-paper-myrmidon-swarm-review.md  academic-paper-validation.md  (+3073 more)
(+2869 files in other folders)
