[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-mnemosyne"
version = "2.1.0"
description = "Skills marketplace for the HomericIntelligence agentic ecosystem"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
]

# Flat repo layout (scripts/, skills/, tests/, ...) breaks setuptools
# auto-discovery, so the distributable is declared explicitly: the shared
# library module scripts/skill_utils.py ships as top-level `skill_utils`,
# matching the flat `from skill_utils import ...` imports used repo-wide.
[tool.setuptools]
package-dir = {"" = "scripts"}
py-modules = ["skill_utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=scripts --cov-report=term-missing"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
