[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-mnemosyne"
version = "3.0.0"
description = "Skills and session-memory store for the HomericIntelligence agentic ecosystem"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
]

# Flat repo layout (scripts/, skills/, tests/, ...) breaks setuptools
# auto-discovery, so the distributable is declared explicitly. The shared
# library module is namespaced to avoid colliding with unrelated top-level
# modules in environments that install project-mnemosyne.
[tool.setuptools]
package-dir = {"" = "scripts"}
py-modules = ["mnemosyne_skill_utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=scripts --cov-report=term-missing"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
